maple-core-macro/tests/ui/ifelse-fail.stderr
error: expected `if`
  --> $DIR/ifelse-fail.rs:14:14
   |
14 |             @else true {
   |              ^^^^

error[E0425]: cannot find value `unknown_condition` in this scope
 --> $DIR/ifelse-fail.rs:6:17
  |
6 |             @if unknown_condition {
  |                 ^^^^^^^^^^^^^^^^^ not found in this scope
